Get Breaches Endpoint. Returns the number of breaches from have I been pwned data corpus.
